--- a/src/app/src/main/res/layout/fragment_profile_view.xml
+++ b/src/app/src/main/res/layout/fragment_profile_view.xml
@@ -18,7 +18,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:layout_margin="30dp"
+            android:layout_margin="20dp"
             android:src="@mipmap/ic_launcher_emoji"
             tools:ignore="ContentDescription" />
 
@@ -134,6 +134,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@id/userNameFragmentProfile">
 
         <com.google.android.material.button.MaterialButton
@@ -142,11 +143,12 @@
             android:layout_width="135dp"
             android:layout_height="wrap_content"
             android:text="Following"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorPrimary"
             app:layout_constraintEnd_toStartOf="@+id/FollowersButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/colorPrimary" />
+            app:strokeColor="@color/colorWhite" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/FollowersButton"
@@ -154,11 +156,12 @@
             android:layout_width="135dp"
             android:layout_height="wrap_content"
             android:text="Followers"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorPrimary"
             app:layout_constraintEnd_toStartOf="@+id/FollowButton"
             app:layout_constraintStart_toEndOf="@+id/FollowingButton"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/colorPrimary" />
+            app:strokeColor="@color/colorWhite" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/FollowButton"
@@ -183,9 +186,10 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Edit Profile"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorPrimary"
             android:visibility="invisible"
-            app:strokeColor="@color/colorPrimary"
+            app:strokeColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/FollowersButton"
@@ -199,9 +203,10 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Unfollow"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorPrimary"
             android:visibility="invisible"
-            app:strokeColor="@color/colorPrimary"
+            app:strokeColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/FollowersButton"
