--- a/src/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/src/app/src/main/res/layout/activity_add_mood_event.xml
@@ -31,7 +31,8 @@
                 android:id="@+id/mood_type_selector"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:drawable/btn_dropdown"
+                android:background="@drawable/bg_spinner"
+                android:popupBackground="@color/colorPrimary"
                 android:spinnerMode="dropdown" />
 
             <TextView
@@ -68,7 +69,8 @@
                 android:id="@+id/social_sitation_selector"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:drawable/btn_dropdown"
+                android:background="@drawable/bg_spinner"
+                android:popupBackground="@color/colorPrimary"
                 android:spinnerMode="dropdown" />
 
 
