Move requests button to sidebar

--- a/src/app/src/main/res/menu/navigation_menu.xml
+++ b/src/app/src/main/res/menu/navigation_menu.xml
@@ -34,7 +34,7 @@
             android:id="@+id/nav_preferences"
             android:title="Preferences" />
         <item
-            android:id="@+id/nav_security"
-            android:title="Security" />
+            android:id="@+id/nav_requests"
+            android:title="Follow Requests" />
     </group>
 </menu>
