--- a/src/app/src/main/res/layout/activity_map.xml
+++ b/src/app/src/main/res/layout/activity_map.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|top"
+            android:backgroundTint="@color/lightred"
             android:text="Personal"
             android:padding="10dp"
             android:paddingRight="10dp"
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|top"
+            android:backgroundTint="#0000FF"
             android:text="Friends"
             android:padding="10dp"
             android:paddingRight="10dp"
