--- a/src/app/src/main/res/layout/content_user.xml
+++ b/src/app/src/main/res/layout/content_user.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/list_username_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
