--- a/src/app/src/main/res/layout/activity_map.xml
+++ b/src/app/src/main/res/layout/activity_map.xml
@@ -14,52 +14,63 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-
-
-        <Button
-            android:stateListAnimator="@null"
-            android:id="@+id/user_button"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/map_dropdown"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:backgroundTint="@color/lightred"
-            android:text="Personal"
-            android:padding="10dp"
-            android:paddingRight="10dp"
-            android:visibility="gone"
-            />
+            android:background="@drawable/bg_spinner"
+            android:popupBackground="@color/colorPrimary"
+            android:spinnerMode="dropdown" />
 
-        <Button
-            android:id="@+id/friends_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:backgroundTint="#0000FF"
-            android:text="Friends"
-            android:padding="10dp"
-            android:paddingRight="10dp"
-            android:stateListAnimator="@null"
-            android:visibility="gone"/>
 
-        <Button
-            android:id="@+id/all_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
-            android:text="All"
-            android:padding="10dp"
-            android:paddingRight="10dp"
-            android:stateListAnimator="@null"
-            android:visibility="gone"/>
-    </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="vertical">-->
+
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
+<!--            android:textColor="@color/lightred"-->
+<!--            app:strokeColor="@color/lightred"-->
+<!--            android:stateListAnimator="@null"-->
+<!--            android:id="@+id/user_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="right|top"-->
+<!--            android:text="Personal"-->
+<!--            android:padding="10dp"-->
+<!--            android:paddingRight="10dp"-->
+<!--            android:visibility="gone"-->
+<!--            />-->
+
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
+<!--            android:textColor="#0000FF"-->
+<!--            app:strokeColor="#0000FF"-->
+<!--            android:id="@+id/friends_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="right|top"-->
+<!--            android:text="Friends"-->
+<!--            android:padding="10dp"-->
+<!--            android:paddingRight="10dp"-->
+<!--            android:stateListAnimator="@null"-->
+<!--            android:visibility="gone"/>-->
+
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            app:strokeColor="@color/colorPrimary"-->
+<!--            android:id="@+id/all_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="right|top"-->
+<!--            android:text="All"-->
+<!--            android:padding="10dp"-->
+<!--            android:paddingRight="10dp"-->
+<!--            android:stateListAnimator="@null"-->
+<!--            android:visibility="gone"/>-->
+<!--    </LinearLayout>-->
 
     </FrameLayout>
 
