--- a/src/app/src/main/res/layout/content_user.xml
+++ b/src/app/src/main/res/layout/content_user.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/list_username_text"
         app:layout_constraintTop_toBottomOf="@+id/list_username_text" />
 
