--- a/src/app/src/main/res/menu/navigation_menu.xml
+++ b/src/app/src/main/res/menu/navigation_menu.xml
@@ -30,9 +30,9 @@
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
             android:title="Logout" />
-        <item
-            android:id="@+id/nav_preferences"
-            android:title="Preferences" />
+<!--        <item-->
+<!--            android:id="@+id/nav_preferences"-->
+<!--            android:title="Preferences" />-->
         <item
             android:id="@+id/nav_requests"
             android:title="Follow Requests" />
