--- a/src/app/src/main/res/menu/navigation_menu.xml
+++ b/src/app/src/main/res/menu/navigation_menu.xml
@@ -36,5 +36,9 @@
         <item
             android:id="@+id/nav_requests"
             android:title="Follow Requests" />
+
+<!--        <item-->
+<!--            android:id="@+id/delete_account"-->
+<!--            android:title="Delete Account" />-->
     </group>
 </menu>
