--- a/src/app/src/main/res/layout/content_requests.xml
+++ b/src/app/src/main/res/layout/content_requests.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="UID"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/list_username_text_request"
         app:layout_constraintTop_toBottomOf="@+id/list_username_text_request" />
 
@@ -44,7 +45,7 @@
             android:id="@+id/follow_recent_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FOLLOW RECENT"
+            android:text="ALLOW RECENT"
             android:layout_weight="0.1"/>
 
         <com.google.android.material.button.MaterialButton
@@ -54,7 +55,7 @@
             android:id="@+id/follow_all_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FOLLOW ALL"
+            android:text="ALLOW ALL"
             android:layout_weight="0.2"/>
 
         <com.google.android.material.button.MaterialButton
